--- a/apps/web/app/blog/post/managing-email-stress-for-remote-workers/content.mdx
+++ b/apps/web/app/blog/post/managing-email-stress-for-remote-workers/content.mdx
@@ -124,7 +124,7 @@ Mindfulness and stress reduction practices can be highly effective in managing e
     - Inhale through your nose for 4 seconds.
     - Hold your breath for 7 seconds.
     - Exhale through your mouth for 8 seconds.
-    - Repeat this cycle 3-4 times.
+    - Repeat this cycle 3–4 times.
 
 2. **Mindful Email Checking**: Before opening your email, take a moment to center yourself. Set an intention to stay focused and calm while managing your inbox. This can help you approach your emails with a clear mind and reduce feelings of overwhelm.
 
