openai clean up

--- a/apps/web/app/(landing)/privacy/content.mdx
+++ b/apps/web/app/(landing)/privacy/content.mdx
@@ -16,7 +16,7 @@ When you use our Gmail client app, we automatically collect information about th
 
 We use the information collected for the following purposes:
 
-**Processing Emails**: We send your email data to OpenAI for AI processing of each email to categorise them and plan responses.
+**Processing Emails**: When using the AI features, we send your email data to OpenAI or Anthropic (AWS Bedrock).
 
 **Storing Planned Responses**: We store our planned responses to your emails within our system. We do not store the emails themselves.
 
@@ -26,6 +26,8 @@ We may share the information collected with the following parties:
 
 **OpenAI:** We send email data to OpenAI for AI processing of each email. As per the [OpenAI data usage policies](https://openai.com/policies/api-data-usage-policies), OpenAI will not use data submitted by customers via their API to train or improve their models.
 Any data sent through the API will be retained for abuse and misuse monitoring purposes for a maximum of 30 days, after which it will be deleted (unless otherwise required by law).
+
+**Anthropic:** We send email data to Anthropic (AWS Bedrock) for AI processing of each email.
 
 **PostHog:** We use PostHog for product analytics.
 
